--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+
 body {
     margin: 0;
 }
 .main-flexboard-container {
     font-family: Courier, monospace;
     /*background-color: rgb(212, 231, 252);*/
-    background-image: linear-gradient(120deg, rgb(210, 227, 247), rgb(121, 176, 240));
+    /*background-image: linear-gradient(120deg, rgb(210, 227, 247), rgb(121, 176, 240));*/
     height: 710px;
     padding: 1rem;
     
@@ -19,9 +21,17 @@ body {
 .flexboard-header {
     font-size: 55px;
     text-align: center;
+    font-family: 'Righteous', cursive;
+    background-color: lavender;
+    background-image: linear-gradient(45deg, rgb(120, 148, 238), rgb(240, 241, 250));
+    /*background-image: linear-gradient(45deg, rgb(255, 157, 59), rgb(247, 229, 211));*/
+    background-size: 100%;
+    background-repeat: repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-background-clip: text;
+    -moz-text-fill-color: transparent;
 }
-
-
 
 .main-board-container {
     /*background-color: rgb(139, 223, 157);*/
@@ -51,13 +61,13 @@ body {
         justify-content: flex-end;
     }*/
 
-    form {
+    .card-form {
         display: flex;
         justify-content: center;
         align-items: center;
     }
 
-    form input, form button {
+    div input, div button {
         font-size: 17px;
         border: none;
         padding: 6px;
@@ -100,80 +110,95 @@ body {
     
     #todo-board {
         background-color: rgb(184, 190, 228);
+        /*background-color: rgb(253, 230, 208);*/
+        /*background-color: rgb(250, 250, 250);
+        border: 5px solid rgb(252, 220, 191);*/
         border-radius: 12px;
         height: 550px;
         width: 300px;
     }
-
+    
     #doing-board {
         background-color: rgb(148, 176, 218);
+        /*background-color: rgb(250, 250, 250);
+        border: 5px solid rgb(248, 198, 151);*/
         border-radius: 12px;
         height: 550px;
         width: 300px;
     }
-
+    
     #done-board {
-        background-color: rgb(154, 156, 173);
+        background-color: rgb(167, 169, 187);
+        /*background-color: rgb(250, 250, 250);
+        border: 5px solid rgb(248, 158, 74);*/
         border-radius: 12px;
         height: 550px;
         width: 300px;
     }
+}
 
-    .task-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+.task-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+}
 
-        .task-list {
-            min-width: 30%;
-            list-style: none;
+.task-list {
+    min-width: 30%;
+    list-style: none;
+    padding: 0;
+}
 
-            .task {
-                display: flex;
-                align-items: center;
+.task {
+    display: flex;
+    align-items: center;
+    background-color: rgb(239, 243, 250);
+    font-size: 1rem;
+    border-radius: 10px;
+    width: 250px;
+    padding: 3px;
+    cursor: move;
+    margin: 0.5rem;
+}
 
-                .card {
-                background-color: rgb(239, 243, 250);
-                border-radius: 10px;
-                width: 200px;
-                padding: 7px;
-                display: flex;
-                flex-direction: row;
-                cursor: move;
-                margin-top: 20px;
-                justify-content: center;
+.task li {
+    flex: 1;
+}
+
+.delete-btn {
+    background-color: rgb(239, 243, 250);
+    border: none;
+    font-size: 1.25rem;
+    border-radius: 7px;
+}
+
+/*.card {
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+}*/
+
             
                 
 
-                    .task {
-                        border: none;
-                        background-color: rgb(239, 243, 250);
-                        font-size: 16px;
-                    }
+/*.task {
+    border: none;
+    background-color: rgb(239, 243, 250);
+    font-size: 16px;
+}*/
                 
-                    #priority-button {
-                        display: flex;
-                        justify-content: flex-end;
-                    }
-                }  
+/*#priority-button {
+    display: flex;
+    justify-content: flex-end;
+}*/
+                
 
-                button.deleteBtn {
-                    padding: 5px;
-                    border: none;
-                }
-            }
-        }
-    }
-    
-    
 
-}
-
-.card:hover {
+.task:hover {
     transform: scale(1.05, 1.05);
 }
 
-.card:hover::after {
+.task:hover::after {
     opacity: .1;
 }
 
@@ -192,3 +217,7 @@ body {
         left: 0%;
     }
 }*/
+
+.invisible {
+    display: none;
+}
