--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,32 +5,47 @@ body {
 }
 .main-flexboard-container {
     font-family: Courier, monospace;
-    /*background-color: rgb(212, 231, 252);*/
-    /*background-image: linear-gradient(120deg, rgb(210, 227, 247), rgb(121, 176, 240));*/
-    height: 710px;
+    background-color: rgb(237, 241, 248);
+    /*background-image: linear-gradient(120deg, rgb(240, 241, 250), rgb(120, 148, 238));*/
+    height: 680px;
     padding: 1rem;
     
 }
-.flexboard-top {
+.nav-main-container {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: space-between;
 }
 
+.modal {
+    display: flex;
+}
+
+.left-nav-container {
+    display: flex;
+}
 
 .flexboard-header {
     font-size: 55px;
     text-align: center;
     font-family: 'Righteous', cursive;
     background-color: lavender;
-    background-image: linear-gradient(45deg, rgb(120, 148, 238), rgb(240, 241, 250));
-    /*background-image: linear-gradient(45deg, rgb(255, 157, 59), rgb(247, 229, 211));*/
+    background-image: linear-gradient(45deg, rgb(117, 143, 230), rgb(223, 224, 245));
     background-size: 100%;
     background-repeat: repeat;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent; 
     -moz-background-clip: text;
     -moz-text-fill-color: transparent;
+}
+
+.right-nav {
+    display: flex;
+
+}
+
+.social {
+    list-style: none;
+    margin: 0 2.5vh;
 }
 
 .main-board-container {
@@ -53,7 +68,6 @@ body {
 
 .card-board-container {
 
-
     /*.new-card-btn {
         display: flex;
         padding-left: 50px;
@@ -65,13 +79,15 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-top: 7px;
     }
 
     div input, div button {
         font-size: 17px;
         border: none;
         padding: 6px;
-        margin-top: 7px;    }
+        /*margin-top: 7px; */   
+    }
 
     input {
         width: 225px;
@@ -80,7 +96,7 @@ body {
         margin-right: 5px;
     }
 
-    .task-btn {
+    #do-add-card-btn, #doing-add-card-btn, #done-add-card-btn{
         /*background-color: rgb(239, 243, 250);*/
         /*justify-content: flex-end;
         position: relative;*/
@@ -110,9 +126,7 @@ body {
     
     #todo-board {
         background-color: rgb(184, 190, 228);
-        /*background-color: rgb(253, 230, 208);*/
-        /*background-color: rgb(250, 250, 250);
-        border: 5px solid rgb(252, 220, 191);*/
+        border: 3px solid rgb(168, 173, 209);
         border-radius: 12px;
         height: 550px;
         width: 300px;
@@ -120,8 +134,7 @@ body {
     
     #doing-board {
         background-color: rgb(148, 176, 218);
-        /*background-color: rgb(250, 250, 250);
-        border: 5px solid rgb(248, 198, 151);*/
+        border: 3px solid rgb(138, 164, 204);
         border-radius: 12px;
         height: 550px;
         width: 300px;
@@ -129,95 +142,131 @@ body {
     
     #done-board {
         background-color: rgb(167, 169, 187);
-        /*background-color: rgb(250, 250, 250);
-        border: 5px solid rgb(248, 158, 74);*/
+        border: 3px solid rgb(152, 154, 172);
         border-radius: 12px;
         height: 550px;
         width: 300px;
     }
 }
 
-.task-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;    
+.do-card-container, .doing-card-container, .done-card-container {
+    display: inline-flex;
+    background-color: rgb(239, 243, 250);
+    border-radius: 10px;
+    width: 275px;
+    /*justify-content: center;*/
+    /*align-items: center;  */
 }
 
-.task-list {
+#do-card-list, #doing-card-list, #done-card-list {
     min-width: 30%;
     list-style: none;
-    padding: 0;
+    padding-left: 0;
 }
 
-.task {
+.do-card, .doing-card, .done-card {
     display: flex;
     align-items: center;
-    background-color: rgb(239, 243, 250);
     font-size: 1rem;
-    border-radius: 10px;
-    width: 250px;
     padding: 3px;
     cursor: move;
     margin: 0.5rem;
-}
-
-.task li {
     flex: 1;
 }
 
-.delete-btn {
-    background-color: rgb(239, 243, 250);
-    border: none;
-    font-size: 1.25rem;
-    border-radius: 7px;
-}
-
-/*.card {
-    justify-content: center;
-    flex-direction: row;
-    align-items: center;
-}*/
-
-            
-                
-
-/*.task {
-    border: none;
-    background-color: rgb(239, 243, 250);
-    font-size: 16px;
-}*/
-                
-/*#priority-button {
-    display: flex;
-    justify-content: flex-end;
-}*/
-                
-
-
-.task:hover {
+.do-card-container:hover, .doing-card-container:hover, .done-card-container:hover {
     transform: scale(1.05, 1.05);
 }
 
-.task:hover::after {
+.do-card-container:hover::after, .doing-card-container:hover::after, .done-card-container:hover::after {
     opacity: .1;
 }
 
+.do-delete-btn, .doing-delete-btn, .done-delete-btn {
+    background-color: rgb(215, 218, 223);
+    border: 1;
+    font-size: 1rem;
+    border-radius: 10px;
+    padding: 3px;
+    margin: 1vh;
+    cursor: pointer;
+}
+                
+.invisible {
+    display: none;
+}
+
+#instructions {
+    /*border: 1px solid black;
+    background-color: rgb(237, 241, 248);
+    border-radius: 12px;*/
+    border: 0;
+    margin: 0 2.5vh;
+    padding: 3px;
+    width: 125px;
+    background: rgb(161, 179, 236);
+    color: black;
+    font-weight: bold;
+    transition: background .3s linear;
+    letter-spacing: 2px;
+    border-radius: 3em 8em;
+}
+
+
+.main-page {
+  display: block;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background: rgba(17, 17, 17, 0.4);
+}
+
+#modal {
+  display: block;
+  position: fixed;
+  z-index: 100;
+  width: 25%;
+  background-size: 400% 400%;
+  padding: 40px;
+  text-align: center;
+  border: none;
+  left: 35%;
+  top: 17%;
+  background-color: lavenderblush;
+  border-radius: 2em 8em;
+
+  #welcome {
+      font-size: 25px;
+      font-weight: 700;
+  }
+
+  #questions {
+      font-size: 17px;
+      font-weight: 600;
+  }
+}
+
+
+
 /*@media only screen and (max-width: 850px) {
     .main-board-container {
-        position: absolute;
-        top: 60%;
+
+        /*position: absolute;
+        top: 10%;
         left: 5%;
     }
 }
 
 @media only screen and (max-width: 500px) {
     .main-board-container {
+        float: none;
+        width: 100%;
         position: absolute;
-        top: 60%;
-        left: 0%;
+        top: 10%;
+        left: 5%;
     }
 }*/
 
-.invisible {
-    display: none;
-}
