--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -2,6 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -48,4 +49,5 @@ table {
 }
 button {
 	box-sizing: content-box;
+	
 }
