--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -209,7 +209,7 @@ body {
     font-weight: bold;
     transition: background .3s linear;
     letter-spacing: 2px;
-    border-radius: 3em 8em;
+    border-radius: 16px;
 }
 
 
@@ -221,7 +221,7 @@ body {
   top: 0;
   left: 0;
   z-index: 100;
-  background: rgba(17, 17, 17, 0.4);
+  background: rgba(139, 139, 139, 0.4);
 }
 
 
@@ -240,7 +240,7 @@ body {
   top: 17%;
   background-color: lavenderblush;
   border-radius: 2em 8em;
-  border: 2px solid black;
+
 
   #welcome {
       font-size: 25px;
@@ -274,11 +274,15 @@ body {
 }
 
 .slide {
-    width: 650px;
-    border: 1px solid orange;
+    width: 500px;
+    /*border: 1px solid orange;*/
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.first {
+    margin-left: -15px;
 }
 
 .slide p {
@@ -292,7 +296,7 @@ body {
     position: absolute;
     width: 200px;
     display: flex;
-    justify-content: center;
+    left: 45%;
 }
 
 .manual-btn {
@@ -302,6 +306,7 @@ body {
     cursor: pointer;
     transition: 1s;
     margin-right: 10px;
+
 }
 .manual-btn:hover {
       background-color: rgb(248, 124, 163);
